--- a/irHub/Pages/ProgramListPage.xaml
+++ b/irHub/Pages/ProgramListPage.xaml
@@ -10,7 +10,7 @@
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <hc:ScrollViewer HorizontalContentAlignment="Left">
+    <hc:ScrollViewer HorizontalContentAlignment="Left" Padding="15">
         <hc:TransitioningContentControl TransitionMode="Top2BottomWithFade">
             <hc:FlexPanel
                 AlignContent="SpaceAround"
