--- a/irHub/Dialogs/QuickActionsDialog.xaml
+++ b/irHub/Dialogs/QuickActionsDialog.xaml
@@ -11,7 +11,7 @@
     ShowNonClientArea="False"
     ShowTitle="False"
     SystemBackdropType="Acrylic"
-    Width="500"
+    Width="550"
     WindowStartupLocation="CenterOwner"
     mc:Ignorable="d"
     x:Class="irHub.Dialogs.QuickActionsDialog"
@@ -31,22 +31,21 @@
                                 Background="Transparent"
                                 BorderThickness="0"
                                 FontSize="18"
+                                FontWeight="Medium"
                                 Foreground="White"
                                 GotKeyboardFocus="SearchBox_OnGotKeyboardFocus"
                                 Height="40"
                                 KeyUp="SearchBox_KeyUp"
                                 LostKeyboardFocus="SearchBox_OnLostKeyboardFocus"
-                                VerticalAlignment="Top"
-                                VerticalContentAlignment="Top"
                                 x:Name="PART_TextBox" />
                             <TextBlock
                                 Background="Transparent"
+                                FontWeight="Bold"
                                 Foreground="#A5ACB3"
-                                Height="40"
+                                Height="30"
                                 IsHitTestVisible="False"
-                                Margin="8,0,0,0"
+                                Margin="8,6,0,0"
                                 Text="Search..."
-                                VerticalAlignment="Top"
                                 Visibility="Collapsed"
                                 x:Name="PART_Watermark" />
                         </Grid>
@@ -69,7 +68,7 @@
         HorizontalAlignment="Center"
         Padding="10"
         VerticalAlignment="Center"
-        Width="500">
+        Width="550">
 
         <StackPanel>
             <Border
@@ -77,7 +76,7 @@
                 BorderBrush="#335E8F"
                 CornerRadius="10"
                 Name="SearchBorder">
-                <Grid>
+                <Grid Height="45">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
@@ -88,18 +87,17 @@
                         Grid.Column="0"
                         Height="25"
                         Kind="Magnify"
-                        Margin="10,10,0,0"
-                        VerticalAlignment="Top"
+                        Margin="10,0,0,0"
+                        VerticalAlignment="Center"
                         Width="25" />
 
                     <hc:WatermarkTextBox
                         FontSize="18"
                         Foreground="White"
                         Grid.Column="1"
-                        Height="40"
+                        Height="42"
                         KeyUp="SearchBox_KeyUp"
-                        Margin="0,10,0,0"
-                        VerticalAlignment="Top"
+                        Margin="0,0,0,1"
                         x:Name="SearchBox" />
                 </Grid>
             </Border>
@@ -128,14 +126,13 @@
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-                        <GridViewColumn
-                            DisplayMemberBinding="{Binding Name}"
-                            Header="Name"
-                            Width="Auto" />
+                        <GridViewColumn DisplayMemberBinding="{Binding Name}" Width="Auto" />
                     </GridView>
                 </ListView.View>
                 <ListView.ItemContainerStyle>
                     <Style TargetType="ListViewItem">
+                        <Setter Property="FontWeight" Value="Bold" />
+                        <Setter Property="FontSize" Value="14" />
                         <Setter Property="Foreground" Value="White" />
                         <Setter Property="Background" Value="Transparent" />
                         <Setter Property="BorderBrush" Value="Transparent" />
