--- a/irHub/Windows/MainWindow.xaml
+++ b/irHub/Windows/MainWindow.xaml
@@ -1,5 +1,6 @@
 ﻿<hc:Window
     Closing="MainWindow_OnClosing"
+    Deactivated="MainWindow_OnDeactivated"
     Height="550"
     Loaded="MainWindow_OnLoaded"
     MinHeight="500"
